tests/errors/syntax_errors/types_arg.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(x : x=None, y : y=None):
    pass
